[project]
name = "zqnt-utils"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "redis[asyncio]>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zqnt_utils"]
