[project]
name = "zqnt-utils"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "redis[asyncio]>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zqnt_utils"]
