[project]
name = "zqnt-utils"
version = "1.2.0"
requires-python = ">=3.12"
dependencies = [
    "redis[asyncio]>=8.0.0",
    "grpcio>=1.81.1",
    "protobuf>=4.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "pytest>=9.0.3",
    "grpcio-tools>=1.60.0",
    "mypy-protobuf>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zqnt_utils"]

[tool.ruff]
exclude = ["zqnt_utils/generated/**"]

[tool.ruff.lint]
ignore = ["E402"]
